add new function

--- a/src/app/cms/employee/employee-index/employee-index.component.html
+++ b/src/app/cms/employee/employee-index/employee-index.component.html
@@ -11,7 +11,9 @@
 
   <h1 class="h2">Employees</h1>
 
-
+  <div class="d-flex justify-content-end">
+    <a href="/employee/create" class="btn btn-primary">Add New Employee</a>
+  </div>
   <div class="row my-4">
     <div class="card shadow">
       <div class="card-body">
