--- a/src/app/cms/user/user-index/user-index.component.html
+++ b/src/app/cms/user/user-index/user-index.component.html
@@ -2,16 +2,18 @@
 <section>
   <nav aria-label="breadcrumb">
     <ol class="breadcrumb d-flex justify-content-end">
-        <li class="breadcrumb-item"><a href="/employee/index">Employee</a></li>
+        <li class="breadcrumb-item"><a href="/user/index">Users</a></li>
         <li class="breadcrumb-item active" aria-current="page">Overview</li>
     </ol>
   </nav>
 
 
 
-  <h1 class="h2">Employees</h1>
+  <h1 class="h2">Users</h1>
 
-
+  <div class="d-flex justify-content-end">
+    <a href="/user/create" class="btn btn-primary">Add New User</a>
+  </div>
   <div class="row my-4">
     <div class="card shadow">
       <div class="card-body">
@@ -20,25 +22,21 @@
             <tr>
               <th>ID</th>
               <th>Fullname</th>
+              <th>Username</th>
+              <th>Mobile</th>
               <th>Email</th>
-              <th>Salary</th>
-              <th>Status</th>
-              <th>Group</th>
               <th>Options</th>
             </tr>
           </thead>
           <tbody>
-            <tr>
-              <td>1</td>
-              <td>Mara karma</td>
-              <td>mara@gmail.com </td>
-              <td>176868</td>
-              <td>Active</td>
-              <td>Developer</td>
+            <tr *ngFor="let user of users">
+              <td>{{user.id }}</td>
+              <td>{{user.fullname }}</td>
+              <td>{{user.username }}</td>
+              <td>{{user.mobile }}</td>
+              <td>{{user.email }}</td>
               <td>
-                <button class="btn btn-primary">Detail</button>
-                <button class="btn btn-primary">Edit</button>
-                <button class="btn btn-primary">Delete</button>
+                <button class="btn btn-primary" (click)="deleteUser(user.id)">Delete</button>
               </td>
             </tr>
           </tbody>
